# jupyterhub-templates-ext

./: pyproject.toml
.github/workflows/: release.yml
templates/: .gitkeep  Blank.ipynb
templates/Data Analysis/: Basic Analysis.ipynb  EDA Template.ipynb
templates/Solar System/: Orbits.ipynb  Planets.ipynb
templates_menu/: __init__.py  handlers.py
templates_menu_lab/: package-lock.json  package.json
templates_menu_lab/schema/: plugin.json
templates_menu_lab/src/: index.ts
templates_menu_lab/style/: index.css
